--- a/vignettes/psborrow2.Rmd
+++ b/vignettes/psborrow2.Rmd
@@ -31,7 +31,7 @@ shorten trial duration or reduce the number of subjects needed. However,
 analysis of external control data can also introduce bias. One method for
 incorporating external control data to mitigate bias is **Bayesian dynamic
 borrowing (BDB)**, in which external control data is borrowed to the extent
-that the external and RCT control arms have similar outcomes (
+that the external and RCT control arms have similar outcomes
 (Viele et. al. 2014).
 
 Implementing BDB is computationally involved and requires Markov chain Monte
@@ -70,13 +70,13 @@ electronic health care records or from previous phase III registrational trials.
 
 Refer to the "custom dataset" vignette for more information on
 how to implement BDB analyses on your own data:
-`vignette('2_custom_dataset', package = 'psborrow2')`
+`vignette('custom_dataset', package = 'psborrow2')`
 
 ## Conduct a simulation study
 
 Refer to the "simulation study" vignette for more information on
 how to create a simulation study involving BDB and other innovative trial
-designs: `vignette('4_simulation_study', package = 'psborrow2')`
+designs: `vignette('simulation_study', package = 'psborrow2')`
 
 ## Additional information
 `psborrow2` is the predecessor to
