set_cmdstan_path()

--- a/vignettes/custom_dataset.Rmd
+++ b/vignettes/custom_dataset.Rmd
@@ -47,10 +47,12 @@ program we need. To install CMD Stan, we will call the `cmdstanr` function
 ```{r install-cmdstan-1, include = FALSE}
 if (!dir.exists(cmdstanr::cmdstan_default_path())) {
   install_cmdstan()
+} else {
+  cmdstanr::set_cmdstan_path(path = cmdstanr::cmdstan_default_path())
 }
 ```
 
-```{r install-cmdstan, eval=FALSE}
+```{r install-cmdstan-2, eval=FALSE}
 install_cmdstan(cores = 2)
 ```
 
