hardcode cmdstanr path

--- a/vignettes/custom_dataset.Rmd
+++ b/vignettes/custom_dataset.Rmd
@@ -45,7 +45,7 @@ program we need. To install CMD Stan, we will call the `cmdstanr` function
 `install_cmdstan()`:
 
 ```{r install-cmdstan-1, include = FALSE}
-cmdstanr::set_cmdstan_path(path = cmdstanr::cmdstan_default_path())
+cmdstanr::set_cmdstan_path(path = "/root/.cmdstan")
 ```
 
 ```{r install-cmdstan-2, eval=FALSE}
