--- a/vignettes/psborrow2.Rmd
+++ b/vignettes/psborrow2.Rmd
@@ -80,7 +80,7 @@ how to create a simulation study involving BDB and other innovative trial
 designs: `vignette('simulation_study', package = 'psborrow2')`
 
 ## Additional information
-`psborrow2` is the predecessor to
+`psborrow2` is the successor to
 [`psborrow`](https://cran.r-project.org/web/packages/psborrow/index.html).
 While the core functionality has been replicated in `psborrow2` such that there
 is no longer any reason to prefer `psborrow`, we cite it here
