--- a/vignettes/psborrow2.Rmd
+++ b/vignettes/psborrow2.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
-In this article, you'll learn about the scope of `psborrow2` and where to find
+In this vignette, you'll learn about the scope of `psborrow2` and where to find
 additional information on how to implement analyses in `psborrow2`.
 
 ## Introduction
